# OViewer

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt
App/: CMakeLists.txt  main.cpp  resource.qrc
CMake/: Export.h.in  ExportFunction.cmake
Common/: CMakeLists.txt
Common/include/: CommonExport.h  DataType.h  DicomTags.h  Log.h  Macros.h  PlaneType.h  PrimitiveType.h  SignalHub.h  Style.h
Data/: CMakeLists.txt
Data/include/: DataExport.h  Plane.h  Volume.h
Data/src/: Plane.cpp
Dicom/: CMakeLists.txt
Dicom/include/: DicomExport.h  DicomReadFilter.h  DicomReadFilter.hpp  DicomReadFilter.ipp  DicomReader.hpp  DicomReader.ipp  DicomSeries.h  EquipmentInformation.hpp  ImageInformation.hpp  InformationParser.h  Patient.hpp  PatientInformation.hpp  SeriesInformation.hpp  StudyInformation.hpp  itkImageToVTKImageFilter.h
Dicom/src/: DicomReadFilter.cpp  DicomSeries.cpp  EquipmentInformation.cpp  ImageInformation.cpp  PatientInformation.cpp  SeriesInformation.cpp  StudyInformation.cpp  dummy.cpp
Filters/: CMakeLists.txt
Filters/include/: Dummy.h  FiltersExport.h  ImageResliceFilter.cuh  ImageResliceFilter.h  ImageResliceFilter1.h  ImageResliceFilterCuda.cuh  PlaneLocalBoundsFilter.h
Filters/src/: Dummy.cpp  ImageResliceFilter.cpp  ImageResliceFilter.cu  ImageResliceFilter1.cpp  ImageResliceFilterCuda.cu  PlaneLocalBoundsFilter.cpp
GLObject/: CMakeLists.txt  resource.qrc
GLObject/include/: AbstractCamera.h  Camera.h  CameraConfig.h  FPSCamera.h  FrameBuffer.h  GLObjectExport.h  InteractiveObject.h  LineConfig.h  OrbitCamera.h  Plane.h  ShaderManager.h  ShaderProgram.h  SplitLine.h  TrackballCamera.h  VertexIndexBuffer.h  Vertices.h
GLObject/shader/: Line.geom
GLObject/src/: AbstractCamera.cpp  Camera.cpp  FPSCamera.cpp  FrameBuffer.cpp  OrbitCamera.cpp  ShaderManager.cpp  ShaderProgram.cpp  SplitLine.cpp  TrackballCamera.cpp  VertexIndexBuffer.cpp
Grinding/: CMakeLists.txt
Grinding/Base/: CMakeLists.txt
Grinding/Base/include/: BaseExport.h  dummy.h
Grinding/Base/src/: dummy.cpp
Grinding/Shaders/: CMakeLists.txt
Grinding/Shaders/SDF/: Shape.glsl  csg.glsl
Grinding/Shaders/include/: preprocess.h
Grinding/Shaders/others/: CubeOrientationMarker.cpp  CubeOrientationMarker.h  HollowCubeOrientationMarkerBuilder.cpp  HollowCubeOrientationMarkerBuilder.h  HollowCubeOrientationMarkerWidget.cpp  HollowCubeOrientationMarkerWidget.h
Grinding/Shaders/simulator/: Simulator.glsl
Grinding/Shaders/tests/: SDFImportTest.cpp  test.glsl
Grinding/tests/: GrindingTest.cpp  TSDF_construct.py
MultiPlanarReconstruct/: CMakeLists.txt
MultiPlanarReconstruct/Base/: CMakeLists.txt
MultiPlanarReconstruct/Base/include/: BaseGeometry.h  PlaneGeometry.h  SliceNavigator.h  SlicedGeometry.h
MultiPlanarReconstruct/Base/src/: BaseGeometry.cpp  PlaneGeometry.cpp  SliceNavigator.cpp  SlicedGeometry.cpp
MultiPlanarReconstruct/Base/tests/: SlicedGeometry_unittest.cpp
MultiPlanarReconstruct/Rendering/: CMakeLists.txt
MultiPlanarReconstruct/Rendering/include/: MPRSliceLineRepresentation.h  MPRSliceRepresentation.h  MPRSliceThickLineRepresentation.h  MPRSliceWidget.h  RenderingExport.h
MultiPlanarReconstruct/Rendering/src/: MPRSliceLineRepresentation.cpp  MPRSliceRepresentation.cpp  MPRSliceThickLineRepresentation.cpp  MPRSliceWidget.cpp
MultiPlanarReconstruct/Rendering/tests/: MPRSliceWidgetTest.cpp
MultiPlanarReconstruct/include/: BaseGeometry.h  ImageGeometry.h  MultiPlanarReconstructExport.h  PlaneGeometry.h  SlicedGeometry.h
MultiPlanarReconstruct/src/: BaseGeometry.cpp  ImageGeometry.cpp  PlaneGeometry.cpp  SlicedGeometry.cpp
MultiPlanarReconstruct/tests/: SlicedGeometry_unittest.cpp
Primitive/: CMakeLists.txt  resource.qrc
Primitive/include/: InteractiveObject.h  Line.h  LineConfig.h  Primitive.h  PrimitiveExport.h  Quad.h  QuadConfig.h
Primitive/shader/: quad.frag  quad.vert
Primitive/src/: Line.cpp  Quad.cpp
RenderingGL/: CMakeLists.txt
RenderingGL/include/: Actor.h  IViewport.h  IViewport2D.h  IViewport3D.h  Mapper.h  MultiViewportMgr.h  OpenGLActor.h  OpenGLRenderer.h  PlaneSource.h  PolyDataMapper.h  Renderer.h  RenderingGLExport.h
RenderingGL/src/: MultiViewportMgr.cpp  OpenGLActor.cpp  OpenGLRenderer.cpp  PlaneSource.cpp  PolyDataMapper.cpp
Resources/qss/: dracular_light.qss
Testing/: CMakeLists.txt
Testing/DicomTest/: dicomTest.cpp
Testing/FiltersTest/: ImageResliceTest.cpp  test.frag  test.vert
UI/: CMakeLists.txt  resource.qrc
UI/Core/include/: EventId.h  EventObject.h
UI/GL/src/: UIContext.cpp
UI/Widgets/: CMakeLists.txt
UI/Widgets/include/: DataManagerWidget.h  DcmEvent.h  DcmEventData.h  FileBrowserDialog.h  ImagePropertiesWidget.h  MenuBar.h  MouseEvent.h  OpenGLViewerWidget.h  OpenGLWindow.hpp  SceneView.hpp  SeriesSelectDialog.h  WidgetEvent.h  WidgetEventData.h
UI/Widgets/src/: DataManagerWidget.cpp  FileBrowserDialog.cpp  ImagePropertiesWidget.cpp  MenuBar.cpp  OpenGLViewerWidget.cpp  OpenGLWindow.cpp  SceneView.cpp  SeriesSelectDialog.cpp
UI/include/: ImageSeriesTableView.h  MainWindow.h  PlaneTexture.h  ProjectManagePanel.h  RenderWindow.h  UIExport.h  ViewWindow.h  ViewWindowBase.h  ViewWindowConfig.h  Window.h
UI/src/: ImageSeriesTableView.cpp  MainWindow.cpp  PlaneTexture.cpp  ProjectManagePanel.cpp  RenderWindow.cpp  ViewWindow.cpp  ViewWindowBase.cpp  Window.cpp
doc/: Dicom.md  OpenGL的pipline解释-利用重叠三角形绘制.md  Qt中的d指针和q指针.md  Requirement.md  itkImage转vtkImageData.md  vtk2D绘图.md  vtkRenderWindowInteractor.md  vtkResliceImageViewer解析.md  vtk中ImageReslice的纹理管理.md  vtk的pipeline以及控制字段介绍.md  使用OpenGL绘制2D有宽度的线段.md  医学图像切片.md  基于VTK的MPR实现.md  尝试将cuda slice集成到vtk中.md
doc/shader/: vtkOpenGLShaderCellData.vs
